--- a/shelter/pages/main/scss/main.css
+++ b/shelter/pages/main/scss/main.css
@@ -602,7 +602,6 @@ a:hover {
     width: 320px;
     height: 823px;
     padding: 0;
-    background-color: #292929;
   }
 }
 @media (max-width: 767px) {
@@ -621,6 +620,7 @@ a:hover {
 }
 @media (max-width: 767px) {
   .nav__link {
+    width: max-content;
     font-size: 3.2rem;
   }
 }
@@ -644,6 +644,7 @@ a:hover {
     width: 0;
     top: -30px;
     right: 0;
+    background-color: #292929;
     transition: 0.4s ease-in-out;
     z-index: 1;
     overflow-x: hidden;
